cleaned up corrections

--- a/radvalley.tex
+++ b/radvalley.tex
@@ -708,31 +708,31 @@ Recall that in this study the detection sensitivity for \kepler{} stars is compu
 given the unique completeness products from the \kepler{} pipeline whereas \cite{wu19} adopt the piecewise
 completeness levels of 10, 50, or 90\% complete as a function of $P$ and $r_p$ from \cite{zhu18b}.
 
-\textbf{Also included in Fig.~\ref{fig:fmap} are planets
-  with $\geq 3\sigma$ bulk density measurements from either precision radial velocities or
-  transit timing variations.
-  Planet parameters are retrieved from the NASA Exoplanet Archive for planets orbiting stars with
-  \teff{} $\in[2800,4700]$ K, whose orbital periods and radii span the domain considered in Fig.~\ref{fig:fmap},
-  and whose masses are inconsistent with zero (i.e. no mass upper limits).
-  The properties of the resulting 20 planets are listed in Table~\ref{table:rhop}. Based on the
-  planetary bulk densities $\rho_p$ we define the following composition dispositions: terrestrial
-  dispositions
-  have $\rho_p+\sigma_{\rho_p} \geq 5.5$ g cm$^{-3}$ and $\rho_p-\sigma_{\rho_p} \geq 3.5$ g cm$^{-3}$,
-  gaseous dispositions 
-  have $\rho_p-\sigma_{\rho_p} \leq 2$ g cm$^{-3}$ and $\rho_p+\sigma_{\rho_p} \leq 3.5$ g cm$^{-3}$,
-  with all remaining planets being flagged as having an ambiguous bulk composition (i.e. not clearly
-  terrestrial-like or likely hosting a significant gaseous envelope).}
+Also included in Fig.~\ref{fig:fmap} are planets
+with $\geq 3\sigma$ bulk density measurements from either precision radial velocities or
+transit timing variations.
+Planet parameters are retrieved from the NASA Exoplanet Archive for planets orbiting stars with
+\teff{} $\in[2800,4700]$ K, whose orbital periods and radii span the domain considered in Fig.~\ref{fig:fmap},
+and whose masses are inconsistent with zero (i.e. no mass upper limits).
+The properties of the resulting 20 planets are listed in Table~\ref{table:rhop}. Based on the
+planetary bulk densities $\rho_p$ we define the following composition dispositions: terrestrial
+dispositions
+have $\rho_p+\sigma_{\rho_p} \geq 5.5$ g cm$^{-3}$ and $\rho_p-\sigma_{\rho_p} \geq 3.5$ g cm$^{-3}$,
+gaseous dispositions 
+have $\rho_p-\sigma_{\rho_p} \leq 2$ g cm$^{-3}$ and $\rho_p+\sigma_{\rho_p} \leq 3.5$ g cm$^{-3}$,
+with all remaining planets being flagged as having an ambiguous bulk composition (i.e. not clearly
+terrestrial-like or likely hosting a significant gaseous envelope).
 
-  \textbf{The vast majority of the retrieved planets in Fig.~\ref{fig:fmap}
-  demonstrate clear composition clustering with planet radius.
-  With the exception of the probable terrestrial planet GJ 143b ($P=35.6$ days, $r_p=2.6$ R$_{\oplus}$),
-  all terrestrial planets appear to be smaller than 1.8 R$_{\oplus}$ independently of orbital period.
-  Similarly, all four gaseous planets are larger than 2.6 R$_{\oplus}$ while the three remaining planets
-  with intermediate radii correspond to those with ambiguous bulk compositions. 
-  Thus we are justified in classifying the occurrence rate peak spanning $\sim 0.9-1.4$ R$_{\oplus}$
-  as representing terrestrial planets. The second peak between $\sim 1.9-2.3$ R$_{\oplus}$ hosts
-  planets with ambiguous bulk compositions but are clearly inconsistent with being terrstrial
-  such that we will refer to this feature as the gaseous peak in what follows.}
+The vast majority of the retrieved planets in Fig.~\ref{fig:fmap}
+demonstrate clear composition clustering with planet radius.
+With the exception of the probable terrestrial planet GJ 143b ($P=35.6$ days, $r_p=2.6$ R$_{\oplus}$),
+all terrestrial planets appear to be smaller than 1.8 R$_{\oplus}$ independently of orbital period.
+Similarly, all four gaseous planets are larger than 2.6 R$_{\oplus}$ while the three remaining planets
+with intermediate radii correspond to those with ambiguous bulk compositions. 
+Thus we are justified in classifying the occurrence rate peak spanning $\sim 0.9-1.4$ R$_{\oplus}$
+as representing terrestrial planets. The second peak between $\sim 1.9-2.3$ R$_{\oplus}$ hosts
+planets with ambiguous bulk compositions but are clearly inconsistent with being terrstrial
+such that we will refer to this feature as the gaseous peak in what follows.
 
 \input{densitytable}
 
@@ -893,30 +893,30 @@ space yields $\text{d}r_p / \text{d}\log{P} = 0.085\pm 0.074$.
 
 The negative slope of $\text{d}r_p / \text{d}\log{F} = -0.123$ indicates that the location of the radius valley
 drops to smaller planet radii with increasing insolation (i.e. towards smaller orbital separations).
-\textbf{This behavior
+This behavior
 is broadly consistent with models of the formation small terrestrial planets in a gas-poor environment
 \citep{lee14,lee16,lopez18} leading to the transition from terrestrial to gaseous planets emerging due to the
 superposition of terrestrial and gaseous planet populations whose formation timescales differ. In this scenario, the
-  transition radius as a function of orbital separation is set by the maximum mass of a bare rocky core which
-  itself is set by the amount of available solid material for the proto-planet to form out of via collisional
-  growth. According to the
-  minimum-mass extrasolar nebula \citep{chiang13}, the solid surface density radial profile is
-  $\sigma_{\text{solid}} \propto a^{-1.6}$, where $a$ is the semimajor axis. The amount of solid material 
-  accreted by a proto-planet
-  is proportional to its Hill radius $r_H = a(m_p/3M_s)^{1/3}$ such that integrating over the disk surface results
-  in the maximum mass of a bare rocky core $m_{p,\text{max}} \propto a^{0.6} M_s^{-0.5}$, or
-  $r_{p,\text{valley}} \propto a^{0.16} M_s^{-0.14}$ after applying the rocky planet mass-radius relation
-  \citep{zeng16}. Hence, the transition radius is predicted to occur at larger planet radii with increasing $a$
-  for a given host spectral type \citep{lopez18}. The corresponding theoretical scaling of the transition
-  radius with insolation for a given spectral type is $r_{p,\text{valley}} \propto F^{-0.08}$
-  \citep{lopez18} which is 
-  consistent with our measured scaling between $r_{p,\text{valley}}$ and $\log{F}$ of $-0.123\pm 0.054$.}
+transition radius as a function of orbital separation is set by the maximum mass of a bare rocky core which
+itself is set by the amount of available solid material for the proto-planet to form out of via collisional
+growth. According to the
+minimum-mass extrasolar nebula \citep{chiang13}, the solid surface density radial profile is
+$\sigma_{\text{solid}} \propto a^{-1.6}$, where $a$ is the semimajor axis. The amount of solid material 
+accreted by a proto-planet
+is proportional to its Hill radius $r_H = a(m_p/3M_s)^{1/3}$ such that integrating over the disk surface results
+in the maximum mass of a bare rocky core $m_{p,\text{max}} \propto a^{0.6} M_s^{-0.5}$, or
+$r_{p,\text{valley}} \propto a^{0.16} M_s^{-0.14}$ after applying the rocky planet mass-radius relation
+\citep{zeng16}. Hence, the transition radius is predicted to occur at larger planet radii with increasing $a$
+for a given host spectral type \citep{lopez18}. The corresponding theoretical scaling of the transition
+radius with insolation for a given spectral type is $r_{p,\text{valley}} \propto F^{-0.08}$
+\citep{lopez18} which is 
+consistent with our measured scaling between $r_{p,\text{valley}}$ and $\log{F}$ of $-0.123\pm 0.054$.
 
-\textbf{In addition to being consistent with predictions from gas-poor terrestrial planet formation models,
-  our slope measurements are inconsistent with models of thermally driven atmospheric
-  escape from photoevaporation or core-powered mass loss that predict
+In addition to being consistent with predictions from gas-poor terrestrial planet formation models,
+our slope measurements are inconsistent with models of thermally driven atmospheric
+escape from photoevaporation or core-powered mass loss that predict
 an increasing transition radius with increasing insolation ($r_{p,\text{valley}} \propto F^{0.11}$; \citealt{lopez18},  
-$r_{p,valley} \propto F^{0.10}$; \citealt{gupta19b} respectively).}
+$r_{p,valley} \propto F^{0.10}$; \citealt{gupta19b} respectively).
 The negative slope of the radius valley around low mass stars differs in sign from the trend seen around
 Sun-like stars \citep{martinez19}.
 The differing observational findings in each stellar mass regime may either be interpretted as
@@ -924,17 +924,17 @@ a signature of distinct planet formation processes, wherein gas-poor planet form
 around low mass stars, or that the efficiency of atmospheric post processing weakens around lower mass stars.
 
 
-\textbf{The inclusion of planets with $\geq 3\sigma$ bulk density measurements (see Table~\ref{table:rhop}) in
-  Fig.~\ref{fig:fmapF} reveals that all planets that are inconsistent with having bulk terrestrial
-  compositions lie above the transition radius predictions from all physical models considered
-  (i.e. gas-poor formation, photoevaporation, core-powered mass loss, and impact erosion). However, the
-  temperate terrestrial planet LHS 1140b ($F=0.5$ F$_{\oplus}$, $r_p=1.7$ R$_{\oplus}$) sits in the $F-r_p$ parameter
-  space below the predicted transition radius from gas-poor formation but above the predicted transition from all
-  other models considered. Although LHS 1140b is the only instance of a planet
-  existing between the radius valley predictions from gas-poor formation and thermally driven or impact driven
-  mass loss in Fig.~\ref{fig:fmapF}, the location and composition of LHS 1140b
-  provides supporting evidence for the applicability of models of 
-  gas-poor terrestrial planet formation to the emergence of the radius valley around low mass stars.}
+The inclusion of planets with $\geq 3\sigma$ bulk density measurements (see Table~\ref{table:rhop}) in
+Fig.~\ref{fig:fmapF} reveals that all planets that are inconsistent with having bulk terrestrial
+compositions lie above the transition radius predictions from all physical models considered
+(i.e. gas-poor formation, photoevaporation, core-powered mass loss, and impact erosion). However, the
+temperate terrestrial planet LHS 1140b ($F=0.5$ F$_{\oplus}$, $r_p=1.7$ R$_{\oplus}$) sits in the $F-r_p$ parameter
+space below the predicted transition radius from gas-poor formation but above the predicted transition from all
+other models considered. Although LHS 1140b is the only instance of a planet
+existing between the radius valley predictions from gas-poor formation and thermally driven or impact driven
+mass loss in Fig.~\ref{fig:fmapF}, the location and composition of LHS 1140b
+provides supporting evidence for the applicability of models of 
+gas-poor terrestrial planet formation to the emergence of the radius valley around low mass stars.
 
 \subsection{Planet populations versus stellar mass} \label{sect:Msbin}
 In addition to calculating the occurrence rates $f_{ij}$ among our full stellar sample, here we consider
