adding hyper references

--- a/radvalley.tex
+++ b/radvalley.tex
@@ -1127,7 +1127,8 @@ given the detection sensitvity, the transit proability, and their inherent rate 
 Through sectors 1-14, \tess{} has observed $N_{s,\text{TESS}} = 23,051$ stars less massive than 0.4 M$_{\odot}$
 with 2 minute cadence from its Candidate Target List \citep[CTL;][]{stassun19}.
 Among these stars, the SPOC has reported three objects of interest close to the radius valley
-between $1.4-1.6$ R$_{\oplus}$. Assuming a 0\% false positive rate
+between $1.4-1.6$ R$_{\oplus}$ (TOIs 175.01, 406.01, and 667.01). 
+Assuming a 0\% false positive rate
 among these planet candidates, and the same MAP occurrence rate measured with \kepler{}
 ($f_{\text{valley}}\approx 0.19$ planets per star), we find the probability of \tess{} to detect a transiting planet
 spanning the radius valley around a star with $M_s<0.4$ M$_{\odot}$ to be 
