--- a/refs.bib
+++ b/refs.bib
@@ -26947,27 +26947,26 @@ archivePrefix = "arXiv",
 
 @ARTICLE{cloutier19c,
        author = {{Cloutier}, R. and {Astudillo-Defru}, N. and {Bonfils}, X. and
-         {Jenkins}, J.~S. and {Ricker}, G. and {Vanderspek}, R. and
-         {Latham}, D.~W. and {Seager}, S. and {Winn}, J. and {Jenkins}, J.~M. and
-         {Almenara}, J.~M. and {Bouchy}, F. and {Delfosse}, X. and
-         {D{\'\i}az}, M.~R. and {D{\'\i}az}, R.~F. and {Doyon}, R. and
-         {Figueira}, P. and {Forveille}, T. and {Jaffe}, T. and
+         {Jenkins}, J.~S. and {Berdi{\~n}as}, Z. and {Ricker}, G. and {Vand
+        erspek}, R. and {Latham}, D.~W. and {Seager}, S. and {Winn}, J. and
+         {Jenkins}, J.~M. and {Almenara}, J.~M. and {Bouchy}, F. and
+         {Delfosse}, X. and {D{\'\i}az}, M.~R. and {D{\'\i}az}, R.~F. and
+         {Doyon}, R. and {Figueira}, P. and {Forveille}, T. and
          {Kurtovic}, N.~T. and {Lovis}, C. and {Mayor}, M. and {Menou}, K. and
          {Morgan}, E. and {Morris}, R. and {Muirhead}, P. and {Murgas}, F. and
          {Pepe}, F. and {Santos}, N.~C. and {S{\'e}gransan}, D. and
          {Smith}, J.~C. and {Tenenbaum}, P. and {Torres}, G. and {Udry}, S. and
-         {Vezie}, M. and {Villansenor}, J.},
-        title = "{Characterization of the L 98-59 multi-planetary system with HARPS: two confirmed terrestrial planets and a mass upper limit on the third}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - Earth and Planetary Astrophysics},
+         {Vezie}, M. and {Villasenor}, J.},
+        title = "{Characterization of the L 98-59 multi-planetary system with HARPS. Mass characterization of a hot super-Earth, a sub-Neptune, and a mass upper limit on the third planet}",
+      journal = {\aap},
+     keywords = {stars: individual: L 98-59, planetary systems, stars: low-mass, planets and satellites: terrestrial planets, techniques: radial velocities},
          year = "2019",
-        month = "May",
-          eid = {arXiv:1905.10669},
-        pages = {arXiv:1905.10669},
-archivePrefix = {arXiv},
-       eprint = {1905.10669},
- primaryClass = {astro-ph.EP},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190510669C},
+        month = "Sep",
+       volume = {629},
+          eid = {A111},
+        pages = {A111},
+          doi = {10.1051/0004-6361/201935957},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019A&A...629A.111C},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
