added notes on the the transition region in P-rp space

--- a/FPtable.tex
+++ b/FPtable.tex
@@ -1,3 +1,4 @@
+\capstartfalse
 \begin{deluxetable}{lccc}
 \tabletypesize{\small}
 \tablecaption{\ktwo{} false positive rates for small planets around cool stars\label{tab:FP}}
@@ -14,3 +15,4 @@
 \tablenotetext{a}{These studies do not detect any FPs such that the reported FP rate upper limit is represented by its 95\% confidence interval.}
 \tablenotetext{b}{\cite{mayo18} did not explicitly classify their non-validated planets as FPs so we define FPs within their sample as any PC whose false positive probability exceeds 10\%.}
 \end{deluxetable}
+\capstarttrue
