--- a/K2planettable.tex
+++ b/K2planettable.tex
@@ -1,3 +1,4 @@
+\capstartfalse
 \begin{deluxetable*}{ccccccccc}
 \tabletypesize{\small}
 \tablecaption{\ktwo{} confirmed planet parameters\label{table:planetsK2}}
@@ -63,3 +64,4 @@
 \enddata
 %\tablecomments{}
 \end{deluxetable*}
+\capstarttrue
