--- a/Keplerplanettable.tex
+++ b/Keplerplanettable.tex
@@ -1,3 +1,4 @@
+\capstartfalse
 \begin{deluxetable*}{ccccccccc}
 \tabletypesize{\small}
 \tablecaption{\kepler{} confirmed planet parameters\label{table:planetsKep}}
@@ -291,3 +292,4 @@
 \enddata
 %\tablecomments{}
 \end{deluxetable*}
+\capstarttrue
