--- a/boundstable.tex
+++ b/boundstable.tex
@@ -1,3 +1,4 @@
+\capstartfalse
 \begin{deluxetable*}{ccccccc}
 \tabletypesize{\small}
 \tablecaption{Assumed boundary ranges on the locations of radius valley features\label{tab:bounds}}
@@ -12,3 +13,4 @@ $[0.08,0.42]$ & $\mathcal{U}(\log{0.5},\log{2})$ & $\mathcal{U}(\log{50},\log{10
 \enddata
 \tablecomments{The $r_p$ boundaries on the radius valley are given implicitly by the upper $r_p$ limit on the terrestrial peak and the lower $r_p$ limit on the gaseous peak.}
 \end{deluxetable*}
+\capstarttrue
