--- a/densitytable.tex
+++ b/densitytable.tex
@@ -1,3 +1,4 @@
+\capstartfalse
 \begin{deluxetable*}{lcccccccc}
 \tabletypesize{\small}
 \tablecaption{Planets with $\geq 3\sigma$ bulk density measurements around low mass stars\label{table:rhop}}
@@ -30,3 +31,4 @@ LHS 1140c & 3.77793 & 6.1 & 1.28 & 1.81 & 4.77 & RV & Ter & 16
 9) \citealt{benneke17} 10) \citealt{cloutier19a} 11) \citealt{hamann19} 12) \citealt{persson18} 13) \citealt{macdonald16}
 14) \citealt{kostov19} 15) \citealt{cloutier19c} 16) \citealt{ment19}.}
 \end{deluxetable*}
+\capstarttrue
