--- a/refs.bib
+++ b/refs.bib
@@ -24104,21 +24104,22 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{aigrain15,
-   author = {{Aigrain}, S. and {Hodgkin}, S.~T. and {Irwin}, M.~J. and {Lewis}, J.~R. and 
-	{Roberts}, S.~J.},
-    title = "{Precise time series photometry for the Kepler-2.0 mission}",
-  journal = {MNRAS},
-archivePrefix = "arXiv",
-   eprint = {1412.6304},
- primaryClass = "astro-ph.IM",
- keywords = {methods: data analysis, techniques: photometric},
-     year = 2015,
-    month = mar,
-   volume = 447,
-    pages = {2880-2893},
-      doi = {10.1093/mnras/stu2638},
-   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.447.2880A},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+       author = {{Aigrain}, S. and {Hodgkin}, S.~T. and {Irwin}, M.~J. and
+         {Lewis}, J.~R. and {Roberts}, S.~J.},
+        title = "{Precise time series photometry for the Kepler-2.0 mission}",
+      journal = {MNRAS},
+     keywords = {methods: data analysis, techniques: photometric, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = "2015",
+        month = "Mar",
+       volume = {447},
+       number = {3},
+        pages = {2880-2893},
+          doi = {10.1093/mnras/stu2638},
+archivePrefix = {arXiv},
+       eprint = {1412.6304},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015MNRAS.447.2880A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @ARTICLE{aigrain16,
@@ -24541,7 +24542,7 @@ archivePrefix = "arXiv",
       eid = {38},
     pages = {38},
       doi = {10.1088/0004-637X/742/1/38},
-   adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...742...38Y},
+      url = {http://adsabs.harvard.edu/abs/2011ApJ...742...38Y},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -24584,7 +24585,7 @@ archivePrefix = "arXiv",
 @ARTICLE{gupta19a,
    author = {{Gupta}, A. and {Schlichting}, H.~E.},
     title = "{Sculpting the valley in the radius distribution of small exoplanets as a by-product of planet formation: the core-powered mass-loss mechanism}",
-  journal = {\mnras},
+  journal = {MNRAS},
 archivePrefix = "arXiv",
    eprint = {1811.03202},
  primaryClass = "astro-ph.EP",
@@ -24656,7 +24657,7 @@ archivePrefix = "arXiv",
 @ARTICLE{lopez18,
        author = {{Lopez}, Eric D. and {Rice}, Ken},
         title = "{How formation time-scales affect the period dependence of the transition between rocky super-Earths and gaseous sub-Neptunesand implications for {\ensuremath{\eta}}$_{{\ensuremath{\oplus}}}$}",
-      journal = {\mnras},
+      journal = {MNRAS},
      keywords = {planets and satellites: atmospheres, planets and satellites: composition, planets and satellites: physical evolution, Astrophysics - Earth and Planetary Astrophysics},
          year = "2018",
         month = "Oct",
@@ -27300,7 +27301,7 @@ archivePrefix = "arXiv",
 @ARTICLE{jackson12,
    author = {{Jackson}, A.~P. and {Davis}, T.~A. and {Wheatley}, P.~J.},
     title = "{The coronal X-ray-age relation and its implications for the evaporation of exoplanets}",
-  journal = {\mnras},
+  journal = {MNRAS},
 archivePrefix = "arXiv",
    eprint = {1111.0031},
  primaryClass = "astro-ph.EP",
