--- a/reltable.tex
+++ b/reltable.tex
@@ -1,3 +1,4 @@
+\capstartfalse
 \begin{deluxetable}{cccc}
 \tabletypesize{\small}
 \tablecaption{Relative occurrence rates of close-in terrestrial and gaseous planets around low mass stars\label{tab:rel}}
@@ -10,3 +11,4 @@ $[0.08,0.63]$ & $1.10\pm 0.16$ & $1.02\pm 0.16$ & $1.08\pm 0.23$ \\
 $[0.08,0.42]$ & $1.64\pm 0.43$ & $0.19\pm 0.09$ & $8.46\pm 4.62$
 \enddata
 \end{deluxetable}
+\capstarttrue
