--- a/rpvMstable.tex
+++ b/rpvMstable.tex
@@ -1,3 +1,4 @@
+\capstartfalse
 \begin{deluxetable}{cccc}
 \tabletypesize{\small}
 \tablecaption{Radius valley features versus stellar mass\label{tab:rpvMs}}
@@ -12,3 +13,4 @@ $0.343^{+0.057}_{-0.092}$ & $1.017^{+0.700}_{-0.807}$ & $1.548^{+0.515}_{-0.496}
 \enddata
 \tablecomments{As depicted in Fig.~\ref{fig:rpvMs}.}
 \end{deluxetable}
+\capstarttrue
