fixed some nomenclature

--- a/radvalley.tex
+++ b/radvalley.tex
@@ -212,8 +212,6 @@ considered in the California Kepler Survey \citep[CKS;][]{fulton17}.
 This adopted temperature threshold approximately corresponds to spectral types later than
 K3.5V \citep{pecaut13}. In the following subsections we define our stellar samples from each of \kepler{} or \ktwo{.}
 
-%\vspace{16pt}
-
 \subsection{Kepler Stellar Sample} \label{sect:kep}
 Following the release of \gaia{} DR2 \citep{lindegren18}, \cite{berger18} cross-matched \kepler{} target stars
 with DR2 and compiled a catalog of stellar
@@ -1244,16 +1242,16 @@ intersect at $P\sim 23.52$ days such that two regions of interest emerge and are
 \begin{equation}
   r_p \in 
   \begin{cases}
-        [r_{p,\text{this work}}, r_{p,\text{M19}}], & \quad P < 23.52 \text{ days,} \\
-        [r_{p,\text{M19}}, r_{p,\text{this work}}], & \quad P > 23.52 \text{ days.} \\
+        [r_{p,\text{valley, this work}}, r_{p,\text{valley, M19}}], & P < 23.52 \text{ days,} \\
+        [r_{p,\text{valley, M19}}, r_{p,\text{valley, this work}}], & P > 23.52 \text{ days.} \\
   \end{cases}  \label{eq:transition}
 \end{equation}
 
 \noindent where
 
 \begin{align}
-  r_{p,\text{this work}} &= 0.11\cdot \log_{10}(P)+1.52, \\
-  r_{p,\text{M19}} &= -0.48\cdot \log_{10}(P)+2.32.
+  r_{p,\text{valley, this work}} &= 0.11\cdot \log_{10}(P)+1.52, \\
+  r_{p,\text{valley, M19}} &= -0.48\cdot \log_{10}(P)+2.32.
 \end{align}
 
 \noindent \textbf{These subsets of the $P-r_p$ parameter space define the regions of interest for resolving the
