--- a/refs.bib
+++ b/refs.bib
@@ -9231,24 +9231,6 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{mulders15,
-   author = {{Mulders}, G.~D. and {Pascucci}, I. and {Apai}, D.},
-    title = "{A Stellar-mass-dependent Drop in Planet Occurrence Rates}",
-  journal = {ApJ},
-archivePrefix = "arXiv",
-   eprint = {1406.7356},
- primaryClass = "astro-ph.EP",
- keywords = {planetary systems, planet-star interactions, planets and satellites: formation, protoplanetary disks, stars: low-mass},
-     year = 2015,
-    month = jan,
-   volume = 798,
-      eid = {112},
-    pages = {112},
-      doi = {10.1088/0004-637X/798/2/112},
-   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...798..112M},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
 @ARTICLE{donati08,
    author = {{Donati}, J.-F. and {Morin}, J. and {Petit}, P. and {Delfosse}, X. and 
 	{Forveille}, T. and {Auri{\`e}re}, M. and {Cabanac}, R. and 
@@ -13853,7 +13835,7 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{mulders15,
+@ARTICLE{mulders15a,
    author = {{Mulders}, G.~D. and {Pascucci}, I. and {Apai}, D.},
     title = "{A Stellar-mass-dependent Drop in Planet Occurrence Rates}",
   journal = {ApJ},
@@ -28253,3 +28235,42 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2014AJ....148...64S},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{mulders15b,
+       author = {{Mulders}, Gijs D. and {Pascucci}, Ilaria and {Apai}, D{\'a}niel},
+        title = "{An Increase in the Mass of Planetary Systems around Lower-mass Stars}",
+      journal = {\apj},
+     keywords = {planets and satellites: formation, planetary systems, protoplanetary disks, stars: low-mass, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2015",
+        month = "Dec",
+       volume = {814},
+       number = {2},
+          eid = {130},
+        pages = {130},
+          doi = {10.1088/0004-637X/814/2/130},
+archivePrefix = {arXiv},
+       eprint = {1510.02481},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...814..130M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{neil19,
+       author = {{Neil}, Andrew R. and {Rogers}, Leslie A.},
+        title = "{Host Star Dependence of Small Planet Mass-Radius Distributions}",
+      journal = {\apj},
+     keywords = {methods: statistical, planets and satellites: composition, stars: low-mass, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2018",
+        month = "May",
+       volume = {858},
+       number = {1},
+          eid = {58},
+        pages = {58},
+          doi = {10.3847/1538-4357/aabcc9},
+archivePrefix = {arXiv},
+       eprint = {1911.03579},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...858...58N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
