--- a/radvalley.tex
+++ b/radvalley.tex
@@ -106,12 +106,12 @@ of Toronto, 50 St. George Street, Toronto, ON, M5S 3H4, Canada}
   thermally driven atmospheric mass loss may not dominate the evolution of planets in the low stellar mass
   regime or that we are witnessing the emergence of a separate channel of planet formation around  
   low mass stars. The latter notion is supported by the relative occurrence of terrestrial to gaseous planets
-  which increases by an order-of-magnitude from mid-K to mid-M dwarfs.
-  We also show that the location of the radius valley features shift to smaller sizes with
+  which increases from $0.5\pm 0.1$ to $8.5\pm 4.6$ from mid-K to mid-M dwarfs.
+  The location of the radius valley features are also shown to shift to smaller sizes with
   decreasing stellar mass in agreement with physical models of photoevaporation,
   core-powered mass loss, and gas-poor formation. Although current measurements are
   insufficient to robustly identify the dominant formation pathway of the radius valley,
-  we argue that such inferences may be obtained by \tess{} with $\mathcal{O}(85,000)$
+  such inferences may be obtained by \tess{} with $\mathcal{O}(85,000)$
   mid-to-late M dwarfs observed with 2 minute cadence.
 \end{abstract}
 
